RESOLVED FIXED67681
REGRESSION(r94274): The inner text value of an input element is not updated when input.value is set
https://bugs.webkit.org/show_bug.cgi?id=67681
Summary REGRESSION(r94274): The inner text value of an input element is not updated w...
Ryosuke Niwa
Reported 2011-09-06 15:54:17 PDT
Created attachment 106508 [details] DRT test When HTMLInputElement::setValue, we don't reset m_suggestedValue until after updateInnerTextValue is called. As a result, the inner text value is not updated to new value.
Attachments
DRT test (1.28 KB, text/html)
2011-09-06 15:54 PDT, Ryosuke Niwa
no flags
fixes the bug (5.12 KB, patch)
2011-09-06 16:30 PDT, Ryosuke Niwa
no flags
added PASS/FAIL per ap's request (5.33 KB, patch)
2011-09-06 17:11 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2011-09-06 16:03:36 PDT
Come to think of it, this is yet another regression from r94274 :(.
Ryosuke Niwa
Comment 2 2011-09-06 16:05:26 PDT
(In reply to comment #1) > Come to think of it, this is yet another regression from r94274 :(. To my defense, there were no tests for suggested values prior to http://trac.webkit.org/changeset/94586.
Ryosuke Niwa
Comment 3 2011-09-06 16:30:02 PDT
Created attachment 106514 [details] fixes the bug
Ryosuke Niwa
Comment 4 2011-09-06 17:11:53 PDT
Created attachment 106522 [details] added PASS/FAIL per ap's request
Kent Tamura
Comment 5 2011-09-06 18:38:38 PDT
Comment on attachment 106522 [details] added PASS/FAIL per ap's request ok
Ryosuke Niwa
Comment 6 2011-09-06 18:39:46 PDT
(In reply to comment #5) > (From update of attachment 106522 [details]) > ok Thanks!
Ryosuke Niwa
Comment 7 2011-09-06 21:42:27 PDT
Comment on attachment 106522 [details] added PASS/FAIL per ap's request Clearing flags on attachment: 106522 Committed r94637: <http://trac.webkit.org/changeset/94637>
Ryosuke Niwa
Comment 8 2011-09-06 21:42:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.