REGRESSION(r94274): The inner text value of an input element is not updated when input.value is set https://bugs.webkit.org/show_bug.cgi?id=67681

Reviewed by Kent Tamura.

Source/WebCore:

The bug was caused by HTMLInputElement::setValue's not clearing m_suggestedValue before updateInnerTextValue is called.
Since updateInnerTextValue uses the suggested value when one is present, we need to clear m_suggestedValue in advance.

Test: fast/forms/suggested-value-after-setvalue.html

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::setValue):

LayoutTests:

Added a test that overrides the suggested value by modifying the value IDL attribute of an input element.

* fast/forms/suggested-value-after-setvalue-expected.txt: Added.
* fast/forms/suggested-value-after-setvalue.html: Added.


Canonical link: https://commits.webkit.org/83536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94637 268f45cc-cd09-0410-ab3c-d52691b4dbfc